k8s/networking/ingress/primecart-local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primecart-ui
  namespace: primecart-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - primecart.localhost
      secretName: primecart-local-tls
  rules:
    - host: primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: primecart-ui
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: primecart-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.primecart.localhost
      secretName: primecart-local-tls
  rules:
    - host: api.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: primecart-infra
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.primecart.localhost
      secretName: primecart-local-tls
  rules:
    - host: auth.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: primecart-observe
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  name: http-web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: primecart-observe
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  name: http-web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service
  namespace: primecart-app
spec:
  ingressClassName: nginx
  rules:
    - host: product.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-service
  namespace: primecart-app
spec:
  ingressClassName: nginx
  rules:
    - host: payment.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-service
  namespace: primecart-app
spec:
  ingressClassName: nginx
  rules:
    - host: cart.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-service
  namespace: primecart-app
spec:
  ingressClassName: nginx
  rules:
    - host: customer.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-service
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-service
  namespace: primecart-app
spec:
  ingressClassName: nginx
  rules:
    - host: inventory.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service
  namespace: primecart-app
spec:
  ingressClassName: nginx
  rules:
    - host: order.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-admin-server
  namespace: primecart-app
spec:
  ingressClassName: nginx
  rules:
    - host: sbadmin.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sb-admin-server
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: primecart-infra
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rabbitmq.primecart.localhost
      secretName: primecart-local-tls
  rules:
    - host: rabbitmq.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  name: management

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-insight
  namespace: primecart-infra
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - redis.primecart.localhost
      secretName: primecart-local-tls
  rules:
    - host: redis.primecart.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-insight
                port:
                  number: 5540
